# httpdbusd

./: .gitignore  README.md  configure.ac  dbus types  dbus-client.c
examples/: index.html  rhythmbox.sh
src/: Makefile.am  dbus-client.c  dbus-client.h  http-server.c  http-server.h  httpdbusd  httpdbusd.c
